[general] Style tweaks

--- a/src/layouts/AppLayout.module.less
+++ b/src/layouts/AppLayout.module.less
@@ -1,3 +1,17 @@
+.outerLayout {
+  min-height: 100%;
+}
+
+.innerLayout {
+  // background-color: #fff;
+  margin-left: 56px;
+}
+
+.footer {
+  text-align: center;
+  // background-color: #fff;
+}
+
 .sidebarLogo {
   position: relative;
   width: 56px;
@@ -45,7 +59,7 @@
 }
 
 .content {
-  margin: 72px 16px 0;
+  margin: 56px 0 0;
   overflow-x: hidden;
   overflow-y: scroll;
 }
@@ -78,6 +92,8 @@
   :global(.ant-btn) {
     position: relative;
     margin-right: 8px;
+    width: 70px;
+    height: 34px;
   }
 }
 
