--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;  
 }
+
+.ant-input, .ant-btn, .ant-checkbox-input {
+  border-radius: 0 !important;
+}
