--- a/src/pages/register/RegisterPage.module.less
+++ b/src/pages/register/RegisterPage.module.less
@@ -46,6 +46,18 @@
   }
 }
 
+.inlineField {
+  margin-bottom: 0;
+
+  :global(.ant-form-item) {
+    display: inline-block;
+  }
+}
+
+.sendEmailVerifyCode {
+  font-size: 14px;
+}
+
 .forgetLink {
   float: right;
 }
