--- a/src/layouts/AppLayout.module.less
+++ b/src/layouts/AppLayout.module.less
@@ -92,7 +92,9 @@
   :global(.ant-btn) {
     position: relative;
     margin-right: 8px;
-    width: 70px;
+    width: 75px;
+    padding-left: 0;
+    padding-right: 0;
     height: 34px;
   }
 }
