--- a/src/pages/login/LoginPage.module.less
+++ b/src/pages/login/LoginPage.module.less
@@ -41,6 +41,10 @@
     white-space: pre;
   }
 
+  :global(.ant-form-item-children-icon > .anticon-close-circle) {
+    display: none;
+  }
+
   input {
     font-size: 15px;
   }
