--- a/src/layouts/AppLayout.module.less
+++ b/src/layouts/AppLayout.module.less
@@ -56,12 +56,20 @@
   padding: 0;
   height: 56px;
   border-bottom: 1px solid #e8e8e8;
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    width: 100%;
+    height: 5px;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0));
+  }
 }
 
 .content {
   margin: 56px 0 0;
   overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 .user {
