fix(login): fix login error message broken to lines

--- a/src/pages/register/RegisterPage.module.less
+++ b/src/pages/register/RegisterPage.module.less
@@ -7,8 +7,7 @@
     :global(.ui.label) {
       position: absolute;
       top: 5px;
-      word-break: keep-all;
-      white-space: pre;
+      white-space: nowrap;
       text-align: left;
 
       &:global(.left.pointing) {
