--- a/src/pages/login/LoginPage.module.less
+++ b/src/pages/login/LoginPage.module.less
@@ -8,7 +8,7 @@
       position: absolute;
       top: 5px;
       left: 416px;
-      word-break: keep-all;
+      white-space: nowrap;
     }
   }
 }
