feat(layout): add language switcher

--- a/src/layouts/AppLayout.module.less
+++ b/src/layouts/AppLayout.module.less
@@ -79,3 +79,10 @@ body {
   border: none !important;
   color: #999;
 }
+
+.languageSwitchContainer {
+  :global(.icon) {
+    font-size: 1.3em !important;
+    margin-top: 5px;
+  }
+}
