feat(problem): add tags in problem page

--- a/src/pages/problem/ProblemPage.module.less
+++ b/src/pages/problem/ProblemPage.module.less
@@ -19,6 +19,18 @@
   }
 }
 
+.toggleTagsLabel {
+  user-select: none;
+
+  :global(.icon) {
+    cursor: pointer;
+    margin-right: 0 !important;
+    margin-left: .5em !important;
+    font-size: .92857143em !important;
+    transition: transform .3s ease;
+  }
+}
+
 .divider {
   margin-top: 45px !important;
   margin-left: -233333px !important;
