feat(problem): add content language switch in problem page

--- a/src/pages/problem/ProblemPage.module.less
+++ b/src/pages/problem/ProblemPage.module.less
@@ -2,6 +2,12 @@
   padding: 0 30px;
 }
 
+.languageSelectIcon {
+  margin-left: 10px;
+  font-size: 17px;
+  vertical-align: bottom;
+}
+
 .headerContainer {
   margin-top: 10px;
   margin-bottom: 80px;
