--- a/src/pages/register/RegisterPage.module.less
+++ b/src/pages/register/RegisterPage.module.less
@@ -1,4 +1,5 @@
 .wrapper {
+  margin: 0 auto;
   max-width: 550px;
 
   :global(.error.field) {
@@ -11,11 +12,11 @@
       text-align: left;
 
       &:global(.left.pointing) {
-        left: 516px;
+        left: 544px;
       }
 
       &:global(.right.pointing) {
-        right: 269px;
+        right: 284px;
       }
     }
   }
@@ -27,7 +28,7 @@
 }
 
 .header {
-  padding: 10px 0 20px 0;
+  margin: 7px 0 20px 0 !important;
   font-size: 26px !important;
   font-weight: 500 !important;
   opacity: 0.9;
@@ -43,5 +44,6 @@
 }
 
 .message {
+  text-align: center;
   box-shadow: none !important;
 }
