--- a/src/pages/login/LoginPage.module.less
+++ b/src/pages/login/LoginPage.module.less
@@ -1,4 +1,5 @@
 .wrapper {
+  margin: 0 auto;
   max-width: 450px;
 
   :global(.error.field) {
@@ -14,7 +15,7 @@
 }
 
 .header {
-  padding: 10px 0 20px 0;
+  margin: 7px 0 20px 0 !important;
   font-size: 26px !important;
   font-weight: 500 !important;
   opacity: 0.9;
@@ -30,5 +31,6 @@
 }
 
 .message {
+  text-align: center;
   box-shadow: none !important;
 }
