--- a/src/pages/problem/ProblemPage.module.less
+++ b/src/pages/problem/ProblemPage.module.less
@@ -1,7 +1,3 @@
-.container {
-  padding: 0 30px;
-}
-
 .languageSelectIcon {
   margin-left: 10px;
   font-size: 17px;
@@ -10,7 +6,11 @@
 
 .headerContainer {
   margin-top: 10px;
-  margin-bottom: 80px;
+  margin-bottom: 39px;
+
+  :global(.ui.label) {
+    margin: 2px !important;
+  }
 }
 
 .headerRightStatisticGroup {
@@ -23,6 +23,11 @@
   > :first-child {
     margin-left: 0 !important;
   }
+}
+
+.labels {
+  margin-top: -2px;
+  white-space: nowrap; // FIXME
 }
 
 .toggleTagsLabel {
@@ -38,23 +43,28 @@
 }
 
 .divider {
-  margin-top: 45px !important;
+  margin-top: 37.5px !important;
   margin-left: -233333px !important;
   margin-right: -233333px !important;
 }
 
-.rightColumn {
-  position: sticky !important;
-  top: -152px;
-  align-self: flex-start;
+.leftContainer, .rightContainer {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.leftContainer {
+  padding-right: 1rem;
 }
 
 .rightContainer {
-  float: right;
+  padding-left: 1rem;
+  position: sticky !important;
+  top: -152px;
 }
 
 .actionMenusWrapper {
-  margin-top: 40px !important;
+  margin-top: 87px !important;
 }
 
 .secondActionMenu {
@@ -63,7 +73,6 @@
 
 .actionMenu {
   min-height: 0 !important;
-  min-width: 240px !important;
 
   border-right: none !important;
   border-left-width: 2px !important;
@@ -130,5 +139,95 @@
 
   :global(p) {
     margin-bottom: 1em !important;
+  }
+}
+
+// responsive
+
+@actionMenuWidth: 260px;
+@rightContainerWidth: calc(@actionMenuWidth + 1rem);
+
+.leftContainer {
+  width: calc(100% - @rightContainerWidth);
+}
+
+.rightContainer {
+  width: @rightContainerWidth;
+}
+
+.actionMenu {
+  width: @actionMenuWidth !important;
+}
+
+@media only screen and (max-width: 1023px) and (min-width: 768px) {
+  @actionMenuWidth: 180px;
+  @rightContainerWidth: calc(@actionMenuWidth + 1rem);
+
+  .leftContainer {
+    width: calc(100% - @rightContainerWidth);
+  }
+  
+  .rightContainer {
+    width: @rightContainerWidth;
+  }
+  
+  .actionMenu {
+    width: @actionMenuWidth !important;
+  }
+
+  .headerRightStatisticGroup > :global(.ui.statistic) {
+    &:first-child {
+      margin-right: 1em !important;
+    }
+
+    &:not(:first-child) {
+      margin-left: 1em !important;
+    }
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .headerContainer {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  
+  .labels {
+    white-space: initial;
+  }
+
+  .divider {
+    margin-top: 15px !important;
+  }
+
+  .leftContainer {
+    width: 100%;
+    padding-right: 0;
+  }
+
+  .columnSampleInput {
+    padding-right: 0.5rem !important;
+  }
+
+  .columnSampleOutput {
+    padding-left: 0.5rem !important;
+  }
+
+  .rightContainer {
+    padding-left: 0;
+    position: static !important;
+    width: 100%;
+  }
+
+  .actionMenusWrapper, .secondActionMenu {
+    margin-top: 27px !important;
+  }
+
+  .actionMenu {
+    width: 100% !important;
+  }
+
+  .headerRightStatisticGroup {
+    margin: 10px auto !important;
   }
 }
