feat(problem): minor style tweaks

--- a/src/layouts/AppLayout.module.less
+++ b/src/layouts/AppLayout.module.less
@@ -139,7 +139,9 @@ html, body, :global(#root), .sidebarPushable, .sidebarPusher {
 }
 
 @media only screen and (max-width: 767px) {
-  margin-top: 10px !important;
+  .footer {
+    margin-top: 10px !important;
+  }
 }
 
 .languageSwitchContainer {
