feat(problem): add back to problem button in problem edit page

--- a/src/pages/problem/ProblemEditPage.module.less
+++ b/src/pages/problem/ProblemEditPage.module.less
@@ -1,3 +1,13 @@
+.headerContainer {
+  display: flex;
+  align-items: center;
+}
+
+.backButton {
+  margin-left: auto !important;
+  margin-right: 10px !important;
+}
+
 .localeTabPane {
   border: none !important;
   padding: 2px !important;
