feat(layout): center align the language switch menu

--- a/src/layouts/AppLayout.module.less
+++ b/src/layouts/AppLayout.module.less
@@ -150,3 +150,8 @@ html, body, :global(#root), .sidebarPushable, .sidebarPusher {
     margin-top: 5px;
   }
 }
+
+.languageSwitchMenu {
+  left: 50% !important;
+  transform: translateX(-50%);
+}
