--- a/src/pages/submission/submissions/SubmissionsPage.module.less
+++ b/src/pages/submission/submissions/SubmissionsPage.module.less
@@ -54,6 +54,10 @@
       display: inline-block;
     }
   }
+
+  :global(.icon:not(.dropdown)) {
+    margin-right: 9px !important;
+  }
 }
 
 .queryInputStatus:not(.selectedAll) {
