feat(submission): show vertical divider lines when title has two rows

--- a/src/pages/submission/submission/SubmissionPage.module.less
+++ b/src/pages/submission/submission/SubmissionPage.module.less
@@ -34,7 +34,7 @@
 .accordionTitle {
   white-space: nowrap;
 
-  :not(:global(.active)) + & {
+  :not(:global(.active)) + &:not(.accordionTitleTwoRows) {
     border-top: none !important;
   }
 
