--- a/src/pages/submission/submission/SubmissionPage.module.less
+++ b/src/pages/submission/submission/SubmissionPage.module.less
@@ -1,3 +1,11 @@
+.languageOptions {
+  white-space: nowrap;
+}
+
+.languageOptionsName {
+  padding-right: 12px;
+}
+
 .codeBox {
   margin-top: 0px;
   margin-bottom: 14px;
