--- a/src/pages/problem/problem-set/ProblemSetPage.module.less
+++ b/src/pages/problem/problem-set/ProblemSetPage.module.less
@@ -1,3 +1,14 @@
+.headerRow {
+  height: 68px;
+}
+
+.headerRightControls {
+  height: 100%;
+  display: flex !important;
+  align-items: center;
+  justify-content: flex-end;
+}
+
 .topPagination {
   margin-bottom: -0.6rem;
 }
@@ -25,8 +36,8 @@
 }
 
 @media only screen and (min-width: 768px) {
-  .showTagsCheckbox {
-    margin-right: 20px;
+  .addButton {
+    margin-left: 20px !important;
   }
 
   .search {
