--- a/src/pages/problem/problem-set/ProblemSetPage.module.less
+++ b/src/pages/problem/problem-set/ProblemSetPage.module.less
@@ -39,9 +39,13 @@
   margin-left: auto;
 }
 
+.headerButtons :global(.ui.button):not(:first-child) {
+  margin-left: 10px !important;
+}
+
 @media only screen and (min-width: 768px) {
-  .addButton {
-    margin-left: 20px !important;
+  .headerButtons {
+    margin-left: 15px;
   }
 
   .search {
@@ -65,7 +69,7 @@
     align-items: center;
   }
 
-  .addButton {
-    margin-left: auto !important;
+  .headerButtons {
+    margin-left: auto;
   }
 }
