--- a/src/pages/problem/problem-set/ProblemTagManager.module.less
+++ b/src/pages/problem/problem-set/ProblemTagManager.module.less
@@ -59,6 +59,18 @@
   margin-top: -21px;
   margin-left: -21px;
   border-bottom: 1px solid rgba(34, 36, 38, 0.15);
+
+  &.noTags {
+    display: flex;
+    align-items: center;
+
+    div {
+      opacity: 0.6;
+      margin-left: auto;
+      margin-right: auto;
+      font-size: 18px;
+    }
+  }
 }
 
 .tag {
