feat(problem): add file io label in problem page's header

--- a/src/pages/problem/index/ProblemPage.module.less
+++ b/src/pages/problem/index/ProblemPage.module.less
@@ -31,6 +31,14 @@
   white-space: nowrap; // FIXME
 }
 
+.fileIo {
+  white-space: nowrap;
+}
+
+.fileIoName {
+  padding-right: 12px;
+}
+
 .toggleTagsLabel {
   user-select: none;
 
