feat(problem): add problem search

--- a/src/index.less
+++ b/src/index.less
@@ -4,6 +4,14 @@
   margin-right: 0;
 }
 
+.ui.placeholder.segment > .ui.icon.header {
+  margin-bottom: 20px;
+
+  > .icon {
+    margin-bottom: 20px;
+  }
+}
+
 /* Global styles */
 
 .monospace, code, pre {
