--- a/src/components/TableCellSearchDropdown.module.less
+++ b/src/components/TableCellSearchDropdown.module.less
@@ -7,6 +7,7 @@
     top: 30.5px !important;
     left: -12px !important;
     width: calc(100% + 24px) !important;
+    min-width: 0 !important;
 
     :global(.ui.compact.table) & {
       left: -11px !important;
