feat(*): add run samples when judging

--- a/src/pages/problem/index/ProblemPage.module.less
+++ b/src/pages/problem/index/ProblemPage.module.less
@@ -103,6 +103,12 @@
   }
 }
 
+.skipSamples {
+  margin-top: 19px !important;
+  margin-bottom: -6px !important;
+  display: block !important;
+}
+
 .submitViewForm, .submitButton {
   margin-top: 25px !important;
 }
