feat(*): add code editor and enhanced code highlighter

--- a/src/pages/problem/index/ProblemPage.module.less
+++ b/src/pages/problem/index/ProblemPage.module.less
@@ -87,7 +87,7 @@
 
   flex-grow: 1;
 
-  form {
+  .editorContainer {
     top: 0;
     left: 0;
     width: 100%;
@@ -307,7 +307,7 @@
     padding-right: 0;
   }
 
-  .submitView form {
+  .submitView .editorContainer {
     height: 50vh !important;
   }
 
