--- a/src/pages/submission/submission/SubmissionPage.module.less
+++ b/src/pages/submission/submission/SubmissionPage.module.less
@@ -6,10 +6,6 @@
   padding-right: 12px;
 }
 
-.codeBox {
-  margin-top: 0px;
-  margin-bottom: 14px;
-}
 
 .formatCodeButton {
   position: absolute;
@@ -21,17 +17,8 @@
   margin-right: 0 !important;
 }
 
-.codeBox.main {
+.mainCodeBox {
   margin-bottom: 25px;
-}
-
-.codeBoxSegment {
-  overflow: overlay;
-}
-
-.codeBoxContent {
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 .fileNameWrapper {
