--- a/src/index.less
+++ b/src/index.less
@@ -14,8 +14,9 @@
 
 /* Global styles */
 
+// TODO: Make it customizable
 .monospace, code, pre {
-  font-family: "Fira Code", monospace;
+  font-family: "Fira Mono", monospace !important;
 }
 
 pre {
