--- a/src/components/CodeEditor.module.less
+++ b/src/components/CodeEditor.module.less
@@ -2,6 +2,7 @@
   border: 1px solid rgba(34, 36, 38, 0.15);
   width: 100%;
   height: 100%;
+  position: relative;
 
   &:focus-within {
     border-color: #85b7d9;
