--- a/src/index.less
+++ b/src/index.less
@@ -12,6 +12,14 @@
   }
 }
 
+// https://github.com/Semantic-Org/Semantic-UI-React/issues/3133
+.ui.dimmer .ui.workaround.loader::before {
+  border-color: rgba(0, 0, 0, 0.1);
+}
+.ui.dimmer .ui.workaround.loader::after {
+  border-color: #767676 transparent transparent;
+}
+
 /* Global styles */
 
 // TODO: Make it customizable
