feat(judge-machine): add judge-machine page

--- a/src/layouts/AppLayout.module.less
+++ b/src/layouts/AppLayout.module.less
@@ -144,10 +144,18 @@ html, body, :global(#root), .sidebarPushable, .sidebarPusher {
   }
 }
 
+.footerLinks {
+  margin-top: 2px;
+
+  > a {
+    color: #999 !important;
+  }
+}
+
 .languageSwitchContainer {
   :global(.icon) {
     font-size: 1.3em !important;
-    margin-top: 5px;
+    margin-top: 2px;
   }
 }
 
