feat(user): display localized start of week in subway graph

--- a/src/pages/user/user/UserPage.module.less
+++ b/src/pages/user/user/UserPage.module.less
@@ -106,6 +106,7 @@
       display: inline-flex;
       flex-direction: row;
       direction: ltr;
+      text-align: left;
     
       .label {
         font-size: 11px;
