--- a/src/pages/user/user/UserPage.module.less
+++ b/src/pages/user/user/UserPage.module.less
@@ -21,18 +21,24 @@
 .informationList {
   margin-top: 20px !important;
   margin-bottom: 20px !important;
+}
 
-  .informationListItem {
+.statisticsList {
+  line-height: 2;
+}
+
+.iconWrapper {
+  display: inline-block;
+  opacity: 0.6;
+  margin-right: 3px;
+}
+
+.informationList {
+  .item {
     margin-top: 2px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-
-    .informationListItemIconWrapper {
-      display: inline-block;
-      opacity: 0.6;
-      margin-right: 3px;
-    }
   }
 }
 
@@ -172,5 +178,43 @@
         }
       }
     }
+  }
+}
+
+.statictics {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+
+  .item {
+    width: calc(100% / 3);
+    text-align: center;
+
+    .iconWrapper {
+      margin-right: 5px;
+    }
+
+    .value {
+      margin-left: 7px;
+      font-weight: bolder;
+    }
+  }
+}
+
+.ratingSegment {
+  height: 250px;
+  padding: 0 !important;
+
+  :global(.ui.grid) {
+    height: 100%;
+    margin: 0 !important;
+  }
+
+  .placeholder {
+    min-height: 0 !important;
+    height: 100% !important;
+    border: none !important;
+    border-radius: 0 !important;
+    text-align: center;
   }
 }
